Wed Jun  8 19:20:08 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: Applied patch from
	  Neal H. Walfield about non atomicity of write(), this should close
	  bug #306912

Wed Jun  8 18:30:03 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/Makefile.am: Hurd/Mach patch broke make dist

Wed Jun  8 15:55:20 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c server/gam_tree.c: moving
	  the dnotify file <-> directory mapping outside of the dnotify
	  module which doesn't have enough context.
	* python/gamin.py: fixed a bug on error cases
	* python/tests/Makefile.am python/tests/dnotify15.py: added a specific
	  test case for monitoring multiple files in busy directories

Wed Jun  8 11:34:13 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_hurd_mach_notify.c
	 server/gam_inotify.c server/gam_kqueue.c server/gam_poll.c
	 server/gam_poll.h: changed the way the kernel monitoring registration
	 is done to try to cope later with troubles with dnotify directly from
	 the gam_poll.c code.

Tue Jun  7 10:17:17 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_hurd_mach_notify.c
	  server/gam_hurd_mach_notify.h server/gam_server.c: applied patch from
	  Neal H. Walfield to add native Mach/Hurd support, closes #306707

Tue Jun  7 09:50:07 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/Makefile.am server/Makefile.am: applied patch from
	  Neal H. Walfield to build outside of the source directory,
	  closes #306702

Thu May 26 15:53:19 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: applied patch from John McCutchan fixing
	  bug #171201 of inotify and mounted media.

2005-05-20  Frederic Crozat  <fcrozat@mandriva.com>

	* server/gam_poll.c: (unregister_node),
	(remove_directory_subscription), (prune_tree),
	(gam_poll_remove_subscription_real):